fixed left shift on team2Name

--- a/bundles/worlds_bundle/graphics/DraftLOL.css
+++ b/bundles/worlds_bundle/graphics/DraftLOL.css
@@ -32,7 +32,7 @@ body {
 
 #team2Name {
     /* Score for Team 2 */
-    left: 1253px;
+    left: 1366px;
     width: 392px;
     text-align: right;
 }
